<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAlcohol">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Your Drink"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dranknam"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/barnd"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/AlcoholesTurkishe"
            android:scrollbarSize="8dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/percentage"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/volume2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/howmuch"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="95dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="251dp"
                android:layout_height="76dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#FFFFFF"
                android:scaleType="centerInside"
                android:onClick="AddTheAlcohol"
                android:src="@drawable/button" />

            <Button
                android:id="@+id/addalcoholbutton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:insetTop="6dp"
                android:insetRight="25dp"
                android:onClick="AddTheAlcohol"
                android:text="@string/adddrink"
                android:textSize="20sp" />
        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="95dp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="251dp"
            android:layout_height="76dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFFFFF"
            android:scaleType="centerInside"
            android:onClick="BackToMenu"
            android:src="@drawable/button" />

            <Button
                android:id="@+id/addalcoholbutton2"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_gravity="center_horizontal"
                android:insetTop="16dp"
                android:insetRight="25dp"
                android:onClick="BackToMenu"
                android:text="@string/backtomen"
                android:textAlignment="center"
                android:textSize="20sp" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>